# play-master

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/order/mobile/indoorbuy/com/play_master/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/bean/: XData.cpp  XData.h  XParameter.cpp  XParameter.h
app/src/main/cpp/common/: AndroidLog.h
app/src/main/cpp/decodec/: FFDecode.cpp  FFDecode.h  IDecode.cpp  IDecode.h
app/src/main/cpp/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
app/src/main/cpp/play/audio/: FFResample.cpp  FFResample.h  IAudioPlay.cpp  IAudioPlay.h  IResample.cpp  IResample.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/play/video/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h  XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/cpp/service/: IObserver.cpp  IObserver.h  XThread.cpp  XThread.h
app/src/main/java/order/mobile/indoorbuy/com/play_master/: MainActivity.kt
app/src/main/java/order/mobile/indoorbuy/com/play_master/play/: XPlay.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/order/mobile/indoorbuy/com/play_master/: ExampleUnitTest.kt
buildSrc/src/main/java/: Dependencies.kt
gradle/wrapper/: gradle-wrapper.properties
